todo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deploy
  labels: 
    app: todoapp-deploy
  namespace: itodo  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
      tier: frontend
  template:
    metadata:
      labels:
        app: todoapp
        tier: frontend
    spec:
      containers:
      - name: todoappcontainer
        image: vdocker0123/todo:HPA01
        ports: 
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "10Mi"
            cpu: 10m
        readinessProbe:  
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20    
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: itodo
spec:
  selector:
    app: todoapp
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
  type: NodePort
